# M5Unit-HEART

./: .gitignore  CMakeLists.txt  README.md  _m5_unit_h_e_a_r_t_8hpp.html  _m5_unit_h_e_a_r_t_8hpp_source.html  _m5_unit_unified_h_e_a_r_t_8hpp.html  _m5_unit_unified_h_e_a_r_t_8hpp.js  _m5_unit_unified_h_e_a_r_t_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classm5_1_1heart_1_1_e_m_a-members.html  classm5_1_1heart_1_1_e_m_a.html  classm5_1_1heart_1_1_e_m_a.js  classm5_1_1heart_1_1_filter-members.html  classm5_1_1heart_1_1_filter.html  classm5_1_1heart_1_1_filter.js  classm5_1_1heart_1_1_pulse_monitor-members.html  classm5_1_1heart_1_1_pulse_monitor.html  classm5_1_1heart_1_1_pulse_monitor.js  classm5_1_1max30100_1_1_heart_rate-members.html  classm5_1_1max30100_1_1_heart_rate.html  classm5_1_1max30100_1_1_heart_rate.js  classm5_1_1unit_1_1_unit_m_a_x30100-members.html  classm5_1_1unit_1_1_unit_m_a_x30100.html  classm5_1_1unit_1_1_unit_m_a_x30100.js  classm5_1_1unit_1_1_unit_m_a_x30102-members.html  classm5_1_1unit_1_1_unit_m_a_x30102.html  classm5_1_1unit_1_1_unit_m_a_x30102.js  deprecated.html  dir_0619a8f54b4fad7043a6de45be8fde0b.html  dir_0619a8f54b4fad7043a6de45be8fde0b.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b9225a18e54a15d8544a67849bf5de50.html  dir_b9225a18e54a15d8544a67849bf5de50.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  (+70 more)
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ArduinoBuild_2.yml  ArduinoBuild_3.yml  PlatformioBuild.yml  (+7 more)
boards/: m5stack-nanoc6.json
docs/: Doxyfile  doxy.sh
examples/UnitUnified/DualSensor/main/: CMakeLists.txt  DualSensor.cpp  idf_component.yml
examples/UnitUnified/GraphicalMeter/main/: CMakeLists.txt  GraphicalMeter.cpp  Kconfig.projbuild  idf_component.yml
examples/UnitUnified/PlotToSerial/main/: CMakeLists.txt  PlotToSerial.cpp  idf_component.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+32 more)
src/: M5UnitHEART.h  M5UnitHEART.hpp  M5UnitUnifiedHEART.h  M5UnitUnifiedHEART.hpp
(+39 files in other folders)
